code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_dynamic.snap
---
source: code-blocks-server/tests/test_api.rs
expression: "code_blocks_server::move_block(MoveBlockArgs {\n            queries: get_query_strings(&lang),\n            text: r#\"\n    fn foo() {\n /* ^src */\n        fn in_foo() {\n            bar();\n        }\n    }\n\n    fn bar() {}\n /* ^dst */\n\"#.to_string(),\n            language: lang,\n            src_block: src_block.into(),\n            dst_block: dst_block.into(),\n        }).unwrap()"
---

    fn bar() {}

    fn foo() {
 /* ^src */
        fn in_foo() {
            bar();
        }
    }
 /* ^dst */

