code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_python-5.snap
---
source: code-blocks-server/tests/test_api.rs
expression: snapshot
---

        @decor1
        @decor2
        class A:
            ...
           
        class C:
            """class docstring"""
        
            def __init__(self):
                pass
        
            #Vsrc
            #Vdst
            def bar():
                ...
                
            @staticmethod()
            def foo():
                """method docstring"""
                
        def func():
            ...


New src start:385
