code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_rs-2.snap
---
source: code-blocks-server/tests/test_api.rs
expression: "code_blocks_server::move_block(MoveBlockArgs {\n            queries: get_query_strings(SupportedLanguage::Rust),\n            text: r#\"\nmod m {\n    fn foo() {\n /* ^src */\n        fn in_foo() {\n            bar();\n        }\n    }\n\n    fn bar() {}\n /* ^dst */\n}\n\nfn baz() {}\n\"#.to_string(),\n            language: SupportedLanguage::Rust,\n            src_block: src_block.into(),\n            dst_block: dst_block.into(),\n        }).unwrap()"
---

mod m {
    fn bar() {}

    fn foo() {
 /* ^src */
        fn in_foo() {
            bar();
        }
    }
 /* ^dst */
}

fn baz() {}

