code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_rs-5.snap
---
source: code-blocks-server/tests/test_api.rs
expression: snapshot
---
input:

    mod m {
/*  ^fail */
        fn foo() {}
     /* ^src */
    }

    fn baz() {}

---
output:
Illegal move operation

Caused by:
    Blocks have different parents
