code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_rs-7.snap
---
source: code-blocks-server/tests/test_api.rs
expression: "code_blocks_server::move_block(MoveBlockArgs {\n            queries: get_query_strings(&lang),\n            text: r#\"\n    mod m1 {\n/*  ^src */\n        fn foo() {}\n    }\n\n    mod m2 {\n        fn bar() {}\n    }\n\n    mod m3 {\n/*  ^dst */\n        fn baz() {}\n    }\n\"#.to_string(),\n            language: lang.get_language(),\n            src_block: src_block.into(),\n            dst_block: dst_block.into(),\n            assert_move_legal_fn: Some(check_fn),\n            force: false,\n        }).unwrap()"
---

    mod m2 {
        fn bar() {}
    }

    mod m3 {
/*  ^dst */
        fn baz() {}
    }

    mod m1 {
/*  ^src */
        fn foo() {}
    }

