code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_rs-8.snap
---
source: code-blocks-server/tests/test_api.rs
expression: snapshot
---

    mod m1 {
/*  ^dst */
        fn foo() {}
    }

    mod m3 {
/*  ^src */
        fn baz() {}
    }

    mod m2 {
        fn bar() {}
    }


New src start: 57
New dst start: 5
