code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_supported_dynamic.snap
---
source: code-blocks-server/tests/test_api.rs
expression: "code_blocks_server::move_block(MoveBlockArgs {\n            queries: get_query_strings(&lang),\n            text: r#\"\n        #Vsrc\n        @decor1\n        @decor2\n        class A:\n            ...\n           \n        #Vdst\n        class C:\n            \"\"\"class docstring\"\"\"\n        \n            def __init__(self):\n                pass\n        \n            @staticmethod()\n            def foo():\n                \"\"\"method docstring\"\"\"\n                \n            def bar():\n                ...\n                \n        def func():\n            ...\n\"#.to_string(),\n            language: lang,\n            src_block: src_block.into(),\n            dst_block: dst_block.into(),\n        }).unwrap()"
---

        #Vsrc
        #Vdst
        class C:
            """class docstring"""
        
            def __init__(self):
                pass
        
            @staticmethod()
            def foo():
                """method docstring"""
                
            def bar():
                ...
                
        @decor1
        @decor2
        class A:
            ...
                
        def func():
            ...

