code-blocks-server/code-blocks-server/tests/snapshots/test_api__move_item_ts.snap
---
source: code-blocks-server/tests/test_api.rs
expression: snapshot
---
input:

class TsClass {
    constructor() {}

    foo() {}
/*  ^src */

    /**
    * bar docs
    */
    bar() {}
/*  ^dst */
}

function baz() {}
    
---
output:

class TsClass {
    constructor() {}
/*  ^src */
^ Dest

    /**
    * bar docs
    */
    bar() {}

    foo() {}
    ^ Source
/*  ^dst */
}

function baz() {}
    
